Fixing spacing of header

--- a/frontend/pages/packs/AllPacksPage/_styles.scss
+++ b/frontend/pages/packs/AllPacksPage/_styles.scss
@@ -47,8 +47,8 @@
 
   &__title {
     color: $text-medium;
-    display: inline-block;
     font-size: $large;
+    margin: 0 0 15px;
   }
 
   &__wrapper {
