--- a/frontend/pages/queries/ManageQueriesPage/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/_styles.scss
@@ -56,10 +56,6 @@
     font-size: 24px;
     font-weight: $light;
     letter-spacing: -0.5px;
-
-    .number-pill {
-      vertical-align: text-bottom;
-    }
   }
 
   &__wrapper {
